add changes of scroll direction

--- a/src/components/about/about.astro
+++ b/src/components/about/about.astro
@@ -1,7 +1,7 @@
 ---
 import "./about.css";
 ---
-
+<div id="ancla_about"></div>
 <div id="about">
   <div id="who">
     <h3 class="title">Who am I?</h3>
