--- a/src/components/resume/resume.astro
+++ b/src/components/resume/resume.astro
@@ -9,9 +9,6 @@ import './resume.css';
 
 
 
-<!-- <section>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, quam eaque reiciendis numquam fugit aut necessitatibus quidem distinctio eveniet odit, pariatur voluptas. Numquam a, beatae debitis dolor vitae sequi quaerat.
-</section>
 <section>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, quam eaque reiciendis numquam fugit aut necessitatibus quidem distinctio eveniet odit, pariatur voluptas. Numquam a, beatae debitis dolor vitae sequi quaerat.
 </section>
@@ -68,4 +65,7 @@ import './resume.css';
 </section>
 <section>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, quam eaque reiciendis numquam fugit aut necessitatibus quidem distinctio eveniet odit, pariatur voluptas. Numquam a, beatae debitis dolor vitae sequi quaerat.
-</section> -->
+</section>
+<section>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, quam eaque reiciendis numquam fugit aut necessitatibus quidem distinctio eveniet odit, pariatur voluptas. Numquam a, beatae debitis dolor vitae sequi quaerat.
+</section> 
