--- a/src/components/nav_bar/nav_bar.astro
+++ b/src/components/nav_bar/nav_bar.astro
@@ -7,7 +7,7 @@ import "./nav_bar.css";
 <section id="nav-bar">
   <div class="izq">
     <ul class="lists">
-      <a href="#">Home</a><a href="#">About</a><a href="#">Resume</a>
+      <a href="#header">Home</a><a href="#ancla_about">About</a><a href="#resume">Resume</a>
     </ul>
   </div>
 
