--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import Resume from '@components/resume/resume.astro';
 	background-position: center;
 			background-attachment: fixed;
 	background-size:cover;
-	background-image: url(assets/background.jpeg);
+	background-image: url(assets/back.jpg);
 	filter: brightness(0.1); /* Ajusta el valor según tus preferencias para reducir el brillo */
 	z-index: -1;
 	}
