--- a/src/components/nav_bar/nav_bar.css
+++ b/src/components/nav_bar/nav_bar.css
@@ -39,14 +39,13 @@ font-weight: bold ;
 font-size: 1.1rem;
 
 }
+
 a:hover {
     color:#c77904
-
-
   }
 #profile{
+  margin-left: 42.5vw;
     position: absolute;
-    margin: 45%;
     border-radius: 50%;
     background-color: #fff;
     width: 15vw;
